--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,5 @@
+name: Node.js CI/CD
+
 on:
   push:
     branches:
@@ -7,61 +9,52 @@ on:
     branches:
       - main
       - develop
- 
+
 jobs:
   build:
-    name: Build & Test Spring Boot
+    name: Build & Test Node.js
     runs-on: ubuntu-latest
- 
+
     steps:
       # Récupération du code
       - name: Checkout repository
         uses: actions/checkout@v4
- 
-      # Installation de Java
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+
+      # Installation de Node.js (Remplacement de Java)
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
- 
-      # Build & tests Maven
-      - name: Build with Maven
-        run: mvn clean verify
- 
-      # Upload du JAR comme artefact
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: springboot-jar
-          path: target/*.jar
- 
+          node-version: '20' # Version LTS recommandée
+          cache: 'npm'
+
+      # Installation des dépendances
+      - name: Install dependencies
+        run: npm ci
+
+      # Lancement des tests (si vous en avez configuré dans package.json)
+      - name: Run Tests
+        run: npm test --if-present
+
   docker:
-    name: Build Docker Image
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
     needs: build
+    # On ne pousse l'image que si c'est sur la branche main
     if: github.ref == 'refs/heads/main'
- 
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
- 
-      - name: Download JAR artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: springboot-jar
-          path: target
- 
-      - name: Build Docker image
-        run: docker build -t springboot-app:latest .
 
+      # Connexion au Docker Hub [cite: 41, 42]
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          [cite_start]username: ${{ secrets.DOCKER_USERNAME }} # [cite: 44, 50]
+          [cite_start]password: ${{ secrets.DOCKER_PASSWORD }} # [cite: 45, 50]
+
+      # Construction et Push de l'image (Nom adapté pour nodejs)
       - name: Build & Push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest
