--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,3 +57,14 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest
+
+      # --- AJOUT DU SCAN TRIVY ---
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: '${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'HIGH,CRITICAL'
