--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,13 +58,32 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest
 
-      # --- AJOUT DU SCAN TRIVY ---
+     # JOB 3 : Security Scan (Nouveau Job)
+  trivy-scan:
+    name: Security Scan (Trivy)
+    runs-on: ubuntu-latest
+    needs: docker # IMPORTANT : Attend que le job 'docker' soit fini
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # On se connecte pour pouvoir télécharger (pull) l'image privée/publique
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: '${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest'
           format: 'table'
-          exit-code: '1'
+          # Mettez '0' si vous voulez que le job reste VERT même avec des failles
+          # Mettez '1' si vous voulez que le job devienne ROUGE en cas de failles
+          exit-code: '1' 
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'HIGH,CRITICAL'
